[package]
name = "iron_compress"
version = "0.1.3"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "A modifier for Iron that can compress response bodies"
repository = "https://github.com/gsquire/compress"
documentation = "https://docs.rs/iron_compress"
keywords = ["iron", "hyper", "http"]
license = "MIT"

[dependencies]
flate2 = "0.2"
iron = "0.5"
